--- a/scss/_botones.scss
+++ b/scss/_botones.scss
@@ -15,7 +15,7 @@
     font-weight: bold;
     }
 }
-.btnaqui{
-    color: $colorfondobtn;
+.btnAqui{
+    color: $colorletras;
     text-decoration: underline solid white;
 }
