--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -14,13 +14,13 @@
 }
 
 @media (min-width: 921px){
-    .desclomo{
+    .descLomo{
         color: $colorletras;
         background-color: $colorfondo;
     }
 }
 @media (min-width: 700px){
-    .desclomos{
+    .descLomos{
         color: $colorletras;
         background-color: $colorfondo;
     }
