--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -6,3 +6,11 @@
     width: 50px;
     height: 50px;
 }
+@mixin titulo{
+    color: $colorletras;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bolder;
+    text-decoration: $subrayado;
+}
